--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
   <link rel="stylesheet" href="./main.css">
 </head>
 <body>
+  <div class="title">Save the World!</div>
+  <div class="score-div">
+    <span>Score: </span>
+    <span id="score">0</span>
+  </div>
+  <div id="modal" class="modal-container">
+    <div class="modal-background">
+      <h1 id="modal-score">0</h1>
+      <p>Points</p>
+      <div class="start-div">
+        <button id="startBtn" class="start-button">Start Game</button>
+      </div>
+    </div>
+  </div>
   <canvas id="canvas"></canvas>
   <script src="index.js"></script>
 </body>
