Add game sounds

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <div class="score-div">
     <span>Score: </span>
     <span id="score">0</span>
+    <span>Life: </span>
+    <span id="life">10</span>
   </div>
   <div id="modal" class="modal-container">
     <div class="modal-background">
@@ -22,6 +24,7 @@
     </div>
   </div>
   <canvas id="canvas"></canvas>
+  <audio id="theme-audio"></audio>
   <script src="index.js"></script>
 </body>
 </html>
