--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
   <audio id="theme-audio"></audio>
   <div id="modal" class="modal-container">
     <div class="modal-content">
-      <h1 id="modal-score">0</h1>
-      <p>Points</p>
+      
+      <h1 class="points" id="modal-score">0</h1>
+      <p class="points">Points</p>
       <div class="start-div">
         <button id="startBtn" class="start-button">Start Game</button>
       </div>
