Add code for super mode

--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
     <span>Score: <span id="score">0</span></span>
     <span id="life-whole" class="life">Life: <span id="life">10</span></span>
     <button id="mute">Mute Music</button>
+    <!-- <button id="super">Super Mode</button> -->
   </div>
   <canvas id="canvas"></canvas>
   <audio id="theme-audio"></audio>
   <div id="modal" class="modal-container">
-    <div class="modal-content">
-      
+    <div id="modal-content" class="modal-content">
+      <p class="instruction inst-1">Can you save the Earth from fiery destruction?</p>
+      <p class="instruction inst-2">Click left mouse button to fire missiles!</p>
       <h1 class="points" id="modal-score">0</h1>
       <p class="points">Points</p>
       <div class="start-div">
@@ -32,7 +34,6 @@
       </div>
     </div>
   </div>
-  <script src="index.js"></script>
   <footer>
     <div class="footer-left">
       <p>Designed by: Christopher Jose</p>
@@ -42,5 +43,6 @@
       <a href="https://www.linkedin.com/in/christopher-jose-6361aa120/"><i class="fab fa-linkedin"></i></a>
     </div>
   </footer>
+  <script src="index.js"></script>
 </body>
 </html>
