enable super mode for pages

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <span>Score: <span id="score">0</span></span>
     <span id="life-whole" class="life">Life: <span id="life">10</span></span>
     <button id="mute">Mute Music</button>
-    <!-- <button id="super">Super Mode</button> -->
+    <button id="super">Super Mode</button>
   </div>
   <canvas id="canvas"></canvas>
   <audio id="theme-audio"></audio>
