--- a/index.html
+++ b/index.html
@@ -9,10 +9,20 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="fonts/fontawesome-free-5.15.1-web/css/all.css">
+  <meta property="og:title" content="Save the World" />
+  <meta property="og:image" content="./docs/Screen Shot 2021-01-10 at 9.31.23 PM.png" />
+  <meta
+    property="og:description"
+    content="Save the World is a fun arcade game with simple and easy to use controls where the player is tasked to defend the Earth from incoming projectiles by destroying them with missiles."
+  />
+  <meta
+    property="og:url"
+    content="https://christopherjose707.github.io/Save-the-World-game/"
+  />
+
 </head>
 <body>
   <div class="logo">
-    <!-- <h1>Save the World</h1> -->
     <img src="images/cropped_logo.jpeg" alt="">
   </div>
   <div class="score-div">
