--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="fonts/fontawesome-free-5.15.1-web/css/all.css">
   <meta property="og:title" content="Save the World" />
-  <meta property="og:image" content="docs/Screen Shot 2021-01-10 at 9.31.23 PM.png" />
+  <meta property="og:image" content="screen_linkedin.png" />
   <meta
     property="og:description"
     content="Save the World is a fun arcade game with simple and easy to use controls where the player is tasked to defend the Earth from incoming projectiles by destroying them with missiles."
