--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="fonts/fontawesome-free-5.15.1-web/css/all.css">
-  <link rel="icon" type="image/png" href="images/cropped_logo.jpeg">
+  <link rel="icon" type="image/png" href="images/favicon-192.png">
   <meta property="og:title" content="Save the World" />
   <meta property="og:image" content="screen_linkedin.png" />
   <meta
