Fix top score div

--- a/index.html
+++ b/index.html
@@ -50,8 +50,11 @@
       <p>Designed by: Christopher Jose</p>
     </div>
     <div class="footer-right">
-      <a href="https://github.com/ChristopherJose707"><i class="fab fa-github"></i></a></i>
-      <a href="https://www.linkedin.com/in/christopher-jose-6361aa120/"><i class="fab fa-linkedin"></i></a>
+      <a href="https://github.com/ChristopherJose707" target="_blank"><i class="fab fa-github"></i></a></i>
+      &nbsp;&nbsp;
+      <a href="https://www.linkedin.com/in/christopher-jose-6361aa120/" target="_blank"><i class="fab fa-linkedin"></i></a>
+      &nbsp;&nbsp;
+      <a href="https://christopher-jose.com/" target="_blank"><i class="far fa-address-book"></i></a>
     </div>
   </footer>
   <script src="index.js"></script>
