change portfolio address

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       &nbsp;&nbsp;
       <a href="https://www.linkedin.com/in/christopher-jose-6361aa120/" target="_blank"><i class="fab fa-linkedin"></i></a>
       &nbsp;&nbsp;
-      <a href="https://christopher-jose.com/" target="_blank"><i class="far fa-address-book"></i></a>
+      <a href="https://christopher-jose.net/" target="_blank"><i class="far fa-address-book"></i></a>
     </div>
   </footer>
   <script src="index.js"></script>
